Fix Room & examples

--- a/examples/create_room/Makefile
+++ b/examples/create_room/Makefile
@@ -1,17 +1,17 @@
 # === Compiler and Flags ===
 CXX = g++
-CXXFLAGS = -std=c++17 -I Sockum/include -I Sockum/include/utils -I Sockum/external/UColor_C/include
-LDFLAGS = -L Sockum/build -lSockum
+CXXFLAGS = -std=c++17 -I ../../Sockum/include -I ../../Sockum/include/utils -I ../../Sockum/external/UColor_C/include
+LDFLAGS = -L ../../Sockum/build -lSockum
 
 # === Source Files ===
-OBJ_SERVER = test_server.cpp
-OBJ_CLIENT1 = test_client.cpp
-OBJ_CLIENT2 = test_client2.cpp
+OBJ_SERVER = create_room_server.cpp
+OBJ_CLIENT1 = create_room_client1.cpp
+OBJ_CLIENT2 = create_room_client2.cpp
 
 # === Output Binaries ===
-BIN_SERVER = test_server
-BIN_CLIENT1 = test_client1
-BIN_CLIENT2 = test_client2
+BIN_SERVER = server
+BIN_CLIENT1 = client1
+BIN_CLIENT2 = client2
 
 # === Default Target ===
 all: $(BIN_SERVER) $(BIN_CLIENT1) $(BIN_CLIENT2)
